--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
         <h2 class="mt-8 mb-4 text-4xl underline">Trending Pet Products</h2>
         <!-- card 1 -->
         <div class="flex">
-            <div class="card bg-primary text-primary-content w-1/2 mr-36">
-                <div class="card-body">
-                    <h2 class="card-title">T- Shirt For Dogs</h2>
-                    <p>Discover a world of treats, toys, and <br> essentials handpicked for </p>
+            <div class="card bg-[#F9DF8A] text-primary-content w-1/2 mr-36">
+                <div class="card-body ">
+                    <h2 class="card-title text-[#111111] pt-20">T- Shirt For Dogs</h2>
+                    <p class="text-[#111111]">Discover a world of treats, toys, and <br> essentials handpicked for </p>
                     <a class="w-40 btn bg-[#FFDC26] bg-primary font-[#] sora-normal">Find a pet</a>
                     <div class="card-actions justify-end">
                         <img src="c1-assets/cute-pet-mid.png" alt="">
@@ -398,11 +398,13 @@
 
         <h2 class="mt-8 mb-4  text-4xl underline">Everyday Low Price</h2>
         <!-- card 1 -->
-        <div class="lg:flex sm:grid grid-cols-1 ">
+        <div class="lg:flex sm:grid grid-cols-1  ">
             <div class=" rounded-xl mr-3 bg-base-40 w-1/2 shadow-xl bg-gradient-to-r from-[#F8CCFB] to-[#ACD2FD] ...">
-                <div class="card-body rounded-full  ">
-                    <p class="sora-normal text-[#111111]">Under Price</p>
-                    <h2 class="card-title">Pet Gromming mitt</h2>
+                <div class="card-body rounded-full   ">
+                    <p class="sora-normal text-[#111111] text-4xl ">Under Price</p>
+                    <h2 class="card-title text-5xl  ">Pet Gromming mitt</h2>
+                    <p class="text-3xl">(Easy Hair Removal)</p>
+                    <h2 class="text-7xl">$7.99</h2>
                 </div>
 
                 <div class="card-actions justify-end">
@@ -412,11 +414,9 @@
 
             <div class=" rounded-xl mr-3 w-1/2 bg-base-80 shadow-xl bg-gradient-to-r from-[#FFF9F4] to-[#F9DF8A] ...">
                 <div class="card-body">
-                    <h2 class="card-title">T-shirt for Dogs</h2>
-                    <p class="sora-normal text-[#111111]">Discover a girls for treats,toys and <br> essentials
-                        handpicked
-                        for</p>
-                    <a class="btn bg-[#ffffff] bg-primary w-1/2">Shop Now</a>
+                    <h2 class="card-title text-5xl">T-shirt for Dogs</h2>
+                   <h1 class="font-extrabold text-7xl">$7.99</h1>
+                   <p class="text-5xl">Exclusive Design </p>
                 </div> 
                 <div class="card-actions justify-end">
                     <img class="lg:rounded-full w-3/2" src="c1-assets/cute-pet-mid.png " alt="">
@@ -430,8 +430,11 @@
 
             </div>
             <div class="ml-10">
-                <h2>Get Pawsome News!</h2>
-                <p>Exclusive training tips, ticks, product deals and more.</p>
+                <h2 class="text-5xl">Get Pawsome News!</h2>
+                <br>
+                
+                <p class="text-2xl">Exclusive training tips, ticks, product deals and more.</p>
+                <br>
                 <input class="border" type="email" name="" placeholder="Enter Email" id="">
                 <br>
                 <a class=" mt-2 btn bg-[#FFDC26] bg-primary">Subscribe</a>
